<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FragmentGununYemegi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_80">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp">

                    <ImageView
                        android:layout_width="@dimen/dp_120"
                        android:layout_height="@dimen/dp_60"
                        android:src="@drawable/logo"/>

                    <LinearLayout
                        android:id="@+id/linearChangeDay"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_30"
                        android:layout_gravity="center"
                        android:gravity="end">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/changeDay"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/smooth_blue"
                            android:layout_gravity="center" />
                        <Button
                            android:id="@+id/btnChangeDay"
                            android:layout_width="@dimen/dp_30"
                            android:layout_height="@dimen/dp_30"
                            style="@style/Widget.AppCompat.ImageButton"
                            android:background="@drawable/calendar"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:layout_marginStart="@dimen/dp_8"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatShouldIEatToday"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/smooth_blue"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_marginHorizontal="@dimen/dp_18"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todaysRecipe"
                    android:textSize="@dimen/sp_30"
                    android:textColor="@color/smooth_blue"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginHorizontal="@dimen/dp_18"/>

                <TextView
                    android:id="@+id/txtTodaysRecipeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yaz Çorbası"
                    android:textSize="@dimen/sp_30"
                    android:textColor="@color/smooth_black_2"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginHorizontal="@dimen/dp_18"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    app:cardCornerRadius="@dimen/dp_12"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="@dimen/dp_16"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_40">
                    <TextView
                        android:id="@+id/txtRecipe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/dp_8"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/dp_8">

        <Button
            android:id="@+id/btnBounYemekhane"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/btn_background_1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/bounDiningHall"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgBtnListen"/>


        <ImageView
            android:id="@+id/imgBtnListen"
            android:layout_width="@dimen/dp_60"
            android:layout_height="match_parent"
            android:background="@drawable/btn_background_2"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/volume_up"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnGununYemegi"
            app:layout_constraintStart_toEndOf="@id/btnBounYemekhane"
            android:layout_marginHorizontal="5dp"
            android:padding="@dimen/dp_12"/>

        <Button
            android:id="@+id/btnGununYemegi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/btn_background_1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/todaysFood"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgBtnListen"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>